--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,8 +55,8 @@ jobs:
   deploy-staging:
     runs-on: ubuntu-latest
     needs: [ build-docker, build ]
-    if: github.ref == 'refs/heads/main' && success()
-    environment: production
+    if: github.ref == 'refs/heads/staging' && success()
+    environment: staging
     permissions:
       contents: read
       id-token: write
@@ -80,7 +80,7 @@ jobs:
   deploy-prod:
     runs-on: ubuntu-latest
     needs: [ build-docker, build ]
-    if: github.ref == 'refs/heads/main' && success()
+    if: github.ref == 'refs/heads/master' && success()
     environment: production
     permissions:
       contents: read
